fix: toc headings to divs and shakiness on safari

--- a/HT/Base/Base/Base.scss
+++ b/HT/Base/Base/Base.scss
@@ -70,8 +70,12 @@ button {
 
 /* Content */
 
-#ht .ht #content {
+#content {
   margin-bottom: 0;
+}
+
+#boxed-wrapper {
+  overflow-x: unset;
 }
 
 /* Table */
